Fix incorrect filename for duplicate copies on notification displays The filename is just changed after notification is displayed.

BUG: 484727